--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -159,15 +159,25 @@ a.activepage {
 	font-weight: normal;
 	font-size: 48px;
 	margin-top: 15px;
-	margin-bottom: 45px;
+	margin-bottom: 30px;
 	line-height: normal;
 }
 .pagesummary {
 	font-style: italic;
-	margin: auto auto 40px auto;
+	margin: auto auto 20px auto;
 	max-width: 500px;
 	padding: 0 25px 0 25px;
 	text-align: center;
+}
+.datewritten {
+	opacity: 0.6;
+	font-size: smaller;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.classicdatewritten {
+	text-align: left;
+	margin-bottom: -10px;
 }
 li {
 	margin-bottom: 8px;
