--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -14,6 +14,8 @@
 	<meta name="robots" content="index, follow">
 	<meta name="darkreader-lock">
 	<meta charset="utf-8">
+
+	<link rel="me" href="https://github.com/mat-383"/>
 </head>
 <nav class="navbar">
 	<div class="navbarcontent">
