--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language }}">
+<html lang="{{ .Site.Language }}" style="background-color: #121212 !important; color: #ccc;">
 <head>
 	<title>{{ if not .IsHome }}{{ .Title | title }} - {{ end }}{{ .Site.Title }}</title>
 	<link rel="canonical" href="{{ .Site.BaseURL }}">
@@ -132,6 +132,7 @@
 	<br>
 
 	<div class="footerbadges">
+		<a href="https://mat383.com/fanclub" class="footerhover"><img src="/images/fanclub.gif" alt="Mat383 Fanclub!!"></a>
 		<a href="https://512kb.club/" class="footerhover"><img src="/images/green-team.gif" alt="The 512KB Club"></a>
 		<a href="http://wiby.me/" class="footerhover"><img src="/images/wiby.gif" alt="Wiby, the classic search engine"></a>
 		<br>
