Added a basic page transition

--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
 
 	<link rel="me" href="https://github.com/mat-383"/>
 </head>
+<div class="uncoveranimation"></div>
 <nav class="navbar">
 	<div class="navbarcontent">
 		<a href="/" class="homelink h-card" rel="me">mat383.com</a>
