--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -1,5 +1,6 @@
 /* These are some common colors,
 replace all to edit them because some old browsers don't support CSS variables
+bg: #121212;
 textwhite: #ccc;
 navbarbg: #202020;
 green: rgb(0, 180, 0);
@@ -24,6 +25,9 @@ main {
 }
 body {
 	margin: 0;
+}
+nav {
+	
 }
 .navbarcontent a { /* Moved this navbar styling up here to maybe prevent the links from flickering on page load */
 	text-decoration: none;
@@ -50,6 +54,8 @@ a:hover:not(.postpreviewlink) {
 .navbar {
 	background-color: #202020;
 	padding-top: 2px;
+	position: relative;
+	z-index: 1000;
 }
 .navbarcontent {
 	max-width: 900px;
@@ -518,6 +524,25 @@ footer a:hover {
 		padding-left: 5px;
 		padding-right: 5px;
 	}
+}
+
+.uncoveranimation {
+	position: fixed;
+	z-index: 383;
+	bottom: 0;
+	width: 0vw;
+	height: 0vw;
+	background-color: #121212;
+    animation-name: uncoveranimation;
+    animation-duration: 0.5s;
+	animation-timing-function: ease-out;
+	border:green solid;
+	border-width: 5px 0 0 0;
+}
+
+@keyframes uncoveranimation {
+	0% { width: 100vw; height: 100vw; box-shadow: 0 0 200px rgb(0, 180, 0); border-width: 20px 0 0 0;}
+	100% { width: 100vw; height: 0vw; box-shadow: 0 0 0px rgb(0, 180, 0); border-width: 1px 0 0 0; }
 }
 
 @keyframes shake {
