--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -527,22 +527,33 @@ footer a:hover {
 }
 
 .uncoveranimation {
+	/*not allowing the div to cover the screen unless it will pinky promise to get out of the way*/
+	@supports (animation-name: uncoveranimation) {
+		width: 100vw;
+		height: 100vh;
+	}
+
 	position: fixed;
 	z-index: 383;
 	bottom: 0;
-	width: 0vw;
-	height: 0vh;
 	background-color: #121212;
-    animation-name: uncoveranimation;
-    animation-duration: 0.65s;
+	transform-origin: bottom;
+	animation-name: uncoveranimation;
+	animation-duration: 0.65s;
 	animation-timing-function: ease-in-out;
-	border:rgba(0, 180, 0) solid;
-	border-width: 5px 0 0 0;
+	animation-fill-mode: both;
+	border-top: 5px solid rgba(0, 180, 0);
+	border-top-width: 30px;
 }
 
 @keyframes uncoveranimation {
-	0% { width: 100vw; height: 100vh; border-width: 30px 0 0 0; /*box-shadow: 0 0 200px rgb(0, 180, 0);*/ }
-	100% { width: 100vw; height: 0vh; border-width: 1px 0 0 0;/*box-shadow: 0 0 0px rgb(0, 180, 0);*/ }
+	0% { transform: scaleY(1); }
+	100% { transform: scaleY(0); }
+}
+
+@keyframes uncoveranimation2 {
+	0% { width: 100vw; height: 100vh; /*box-shadow: 0 0 200px rgb(0, 180, 0);*/ }
+	100% { width: 100vw; height: 0vh; /*box-shadow: 0 0 0px rgb(0, 180, 0);*/ }
 }
 
 @keyframes shake {
