--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -252,10 +252,6 @@ svg {
 }
 
 
-.footerhover:not(:hover) {
-	opacity: 0.5;
-	transition: 0.4s;
-}
 footer {
 	text-align: center;
 	font-size: 14px;
@@ -572,4 +568,41 @@ footer a:hover {
 @keyframes fadeinblur {
     from { opacity: 0; filter: blur(5px); }
     to { opacity: 1; filter: blur(0px); }
+}
+
+.footerhover {
+	display:inline-block;
+	margin-bottom: 15px;
+}
+
+.footerhover:not(:hover) {
+	opacity: 0.5;
+	transition: 0.2s;
+}
+
+.sizeanimation:not(:hover) {
+	opacity: 0.5;
+	animation-name: sizeanimationreverse;
+	animation-duration: 0.2s;
+	animation-fill-mode: both;
+	animation-timing-function: ease-out;
+}
+
+.sizeanimation:hover {
+	animation-name: sizeanimation;
+	animation-duration: 0.1s;
+	animation-fill-mode: both;
+	animation-timing-function: ease-out;
+}
+
+@keyframes sizeanimation {
+    0% { transform: scale(1); opacity: 0.5; }
+	1% { opacity: 1; }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1.1); opacity: 1; }
+}
+
+@keyframes sizeanimationreverse {
+    0% { transform: scale(1.1); opacity: 1; }
+    100% { transform: scale(1); opacity: 0.5; }
 }
