--- a/mat383/layouts/shortcodes/tagcloud.html
+++ b/mat383/layouts/shortcodes/tagcloud.html
@@ -1,3 +1,5 @@
 {{ if isset .Site.Taxonomies "tags" }}{{ if not (eq (len .Site.Taxonomies.tags) 0) }}   <ul id="tagcloud">
-    {{ range $name, $items := .Site.Taxonomies.tags }}{{ $url := printf "%s/%s" "tags" ($name | urlize | lower)}}<li><a href="{{ $url | absURL }}" id="tag_{{ $name }}">{{ $name | title }}</a></li>
+    {{ range $name, $items := .Site.Taxonomies.tags }}{{ $url := printf "%s/%s" "tags" ($name | urlize | lower)}}
+    <li class="{{if eq $name "outside"}}tagoutside{{else}}{{if eq $name "website"}}tagwebsite{{end}}{{end}}">
+    <a href="{{ $url | absURL }}" id="tag_{{ $name }}">{{ $name | title }}</a></li>
     {{ end }}</ul>{{ end }}{{ end }}
