--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -81,7 +81,7 @@
 		<script>
 			// Remark42 settings
 			var remark_config = {
-				host: 'https://remark42.mat383.com',
+				host: 'https://mat383.com/remark42',
 				site_id: 'remark',
 				theme: 'dark',
 				show_email_subscription: false,
