--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -66,18 +66,20 @@
 		(not (hasPrefix .RelPermalink "/contact/"))
 		((.Param "commentsenabled"))
 	) (eq .RelPermalink "/tags/")}}
-		<button id="loadComments" class="loadcommentsbutton">
-			<p>Load {{if .IsHome}}Guestbook{{else}}Comments{{end}}</p>
-			<div class="loadcommentsicons">
-				{{if .IsHome}}
-					<img class="loadcommentsicon1" src="/icons/guestbook.svg">
-					<img class="loadcommentsicon2" src="/icons/guestbook-green.svg">
-				{{else}}
-					<img class="loadcommentsicon1" src="/icons/comments.svg">
-					<img class="loadcommentsicon2" src="/icons/comments-green.svg">
-				{{end}}
-			</div>
-		</button>
+		<div id="commentSection">
+			<button id="loadComments" class="loadcommentsbutton">
+				<p>Load {{if .IsHome}}Guestbook{{else}}Comments{{end}}</p>
+				<div class="loadcommentsicons">
+					{{if .IsHome}}
+						<img class="loadcommentsicon1" src="/icons/guestbook.svg">
+						<img class="loadcommentsicon2" src="/icons/guestbook-green.svg">
+					{{else}}
+						<img class="loadcommentsicon1" src="/icons/comments.svg">
+						<img class="loadcommentsicon2" src="/icons/comments-green.svg">
+					{{end}}
+				</div>
+			</button>
+		</div>
 		<script>
 			// Remark42 settings
 			var remark_config = {
@@ -89,6 +91,11 @@
 			};
 			// Function to dynamically load Remark42 scripts
 			function loadRemark42() {
+				if (window.location.protocol !== 'https:') {
+					document.getElementById('commentSection').innerHTML = '<p style="color: #ff5b5b;">Please use HTTPS to view comments.</p>';
+					return;
+				}
+				
 				var components = remark_config.components || ["embed"];
 				var head = document.head || document.body;
 				
