Returned animation to BG particles

--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -220,7 +220,7 @@ div.balls-bg {
 	animation-delay: -2.5s;
 }
 
-/*@keyframes particle-motion {
+@keyframes particle-motion {
     0%{
         transform: translate(0);
         opacity: 0;
@@ -235,7 +235,7 @@ div.balls-bg {
         transform: translate(50%, -100%);
         opacity: 0;
     }
-}*/
+}
 
 
 /* Make the background scale with
